--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>ProfileFrame</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="http://profile-frame.herokuapp.com/assets/application-66402ec1aad2e3dce6e918629a75e734d1efa2c16e8d6565e24c48e0e024a72c.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
