--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -11,23 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :member_id %><br>
     <%= f.number_field :member_id %>
-  </div>
-  <div class="field">
+  </div> -->
+  <!-- <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
+  </div> -->
+  <div class="form-group">
+    <%= f.label :profile_picture %><br>
+    <%= f.file_field :profilepic, :class => "btn btn-default" %>
   </div>
-  <div class="field">
-    <%= f.label :bday %><br>
-    <%= f.datetime_select :bday %>
-  </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :occupation %><br>
-    <%= f.text_field :occupation %>
+    <%= f.text_field :occupation, :class => "form-control", input_html: {:autofocus => true}, :required => true %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :bday %><br>
+    <%= f.date_select :bday, :start_year => Date.current.year, :end_year => Date.current.year-80%>
+  </div>
+  <div class="form-group">
+    <%= f.submit, :class => "btn btn-primary"%>
   </div>
 <% end %>
