--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag @member.profilepic.url(:medium) %>
+</p>
+
+<p>
   <strong>Member:</strong>
   <%= @member.member_id %>
 </p>
