--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Member</h1>
+<h1>New Profile</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', members_path %>
+<%= link_to 'Done', members_path %>
