--- a/app/views/members/prompt.html.erb
+++ b/app/views/members/prompt.html.erb
@@ -1,3 +1,4 @@
 <h3> Welcome. We have detected that you have not create your personal profile. </h3>
 <h3> Create your profile today by clicking the "Create" button below. <h3>
 <%= link_to 'Create', new_member_path %>
+<%= customer_id %>
