--- a/app/views/members/_customform.html.erb
+++ b/app/views/members/_customform.html.erb
@@ -11,14 +11,14 @@
     </div>
   <% end %>
 
-  <!-- <div class="field">
+  <div class="field">
     <%= f.label :member_id %><br>
-    <%= f.number_field :member_id %>
-  </div> -->
-  <!-- <div class="field">
+    <%= f.number_field @member_id %>
+  </div>
+  <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div> -->
+    <%= f.text_field @member_email %>
+  </div>
   <div class="form-group">
     <%= f.label :profile_picture %><br>
     <%= f.file_field :profilepic, :class => "btn btn-default" %>
