--- a/app/views/members/_customform.html.erb
+++ b/app/views/members/_customform.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :member_id %><br>
-    <%= f.number_field @member_id %>
+    <%= f.number_field :member_id, :value => @member_id %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field @member_email %>
+    <%= f.text_field :email, :value => @member_email %>
   </div>
   <div class="form-group">
     <%= f.label :profile_picture %><br>
