changed edit view params name

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @member %> |
-<%= link_to 'Done', members_path(fromOrigin: 'edit') %>
+<%= link_to 'Done', members_path(member_edit_origin: 'edit') %>
