--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,14 @@
   <title>ProfileFrame</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <script src="http://profile-frame.herokuapp.com/assets/application-02c4a673fe2cdedbd47526871f5a1f02182a5696778591932e6a4ed92a684317.js"></script>
+  <script src="http://profile-frame.herokuapp.com/assets/application-7d86bd741b56adbde782b74111d4513015c0a16bd4c58b15bb7fef1a8c8afeed.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
