--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,31 +1,28 @@
-<table>
-  <thead>
-    <tr>
-      <th>ProfilePicture</th>
-      <th>Member</th>
-      <th>Email</th>
-      <th>Bday</th>
-      <th>Occupation</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @members.each do |member| %>
-      <tr>
-        <td><%= image_tag member.profilepic.url(:medium) %></td>
-        <td><%= member.member_id %></td>
-        <td><%= member.email %></td>
-        <td><%= member.bday %></td>
-        <td><%= member.occupation %></td>
-        <td><%= link_to 'Show', member %></td>
-        <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Member', new_member_path %>
+<div class="row">
+  <% @members.each do |member| %>
+    <div class="col-xs-6">
+      <div class="thumbnail">
+        <%= image_tag member.profilepic.url(:medium) %>
+      </div>
+    </div>
+    <div class="col-xs-8">
+      <p>
+        <strong>Member Id:</strong>
+        <%= member.member_id %>
+      </p>
+      <p>
+        <strong>Email:</strong>
+        <%= member.email %>
+      </p>
+      <p>
+        <strong>Birthday:</strong>
+        <%= member.bday %>
+      </p>
+      <p>
+        <strong>Occupation:</strong>
+        <%= member.occupation %>
+      </p>
+      <%= link_to 'Edit', edit_member_path(member), :class => "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
