added bootstrap button

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @member %> |
-<%= link_to 'Done', members_path(member_edit_origin: 'edit') %>
+<%= link_to 'Cancel', members_path(member_edit_origin: 'edit') %>
