--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -22,7 +22,7 @@
         <strong>Occupation:</strong>
         <%= member.occupation %>
       </p>
-      <%= link_to 'Edit', edit_member_path(member), :class => "btn btn-primary" %>
+      <%= link_to 'Edit', edit_member_path(member), class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
