--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Member</h1>
+<h1>Editing Profile</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', members_path(member_edit_origin: 'edit') %>
+<%= link_to 'Cancel', members_path(member_edit_origin: 'edit'), class: "btn btn-primary" %>
