changed button style

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', members_path(member_edit_origin: 'edit'), class: "btn btn-primary" %>
+<%= link_to 'Cancel', members_path(member_edit_origin: 'edit'), class: "btn btn-default" %>
