edit bday display

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -8,7 +8,7 @@
     <div class="col-xs-8">
       <p>
         <strong>Birthday:</strong>
-        <%= member.bday.strftime('%Y-%m-%d') %>
+        <%= member.bday.strftime('%-d %B %Y') %>
       </p>
       <p>
         <strong>Occupation:</strong>
