--- a/app/views/members/prompt.html.erb
+++ b/app/views/members/prompt.html.erb
@@ -1,3 +1,3 @@
-<h4> Welcome. We have detected that you have not create your personal profile. </h4>
-<h4> Create your profile today by clicking the "Create" button below. <h4>
-<%= link_to 'Create', new_member_path(member_id: member_id, member_email: member_email) %>
+<h4> Hi! We have detected that you have not create your personal profile. </h4>
+<h4> Create your profile now by clicking "Create Profile" button below. <h4>
+<%= link_to 'Create Profile', new_member_path(member_id: member_id, member_email: member_email), class: "btn btn-info"  %>
