--- a/app/views/members/_customform.html.erb
+++ b/app/views/members/_customform.html.erb
@@ -32,6 +32,6 @@
     <%= f.date_select :bday, :start_year => Date.current.year, :end_year => Date.current.year-80%>
   </div>
   <div class="form-group">
-    <%= f.submit "Create Profile", class: "btn btn-primary"%>
+    <%= f.submit "Create Profile", class: "btn btn-info"%>
   </div>
 <% end %>
