--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -10,9 +10,9 @@
       </ul>
     </div>
   <% end %>
-  
+
   <div class="form-group">
-    <%= f.label :profile_picture %><br>
+    <%= f.label :profile_Picture %><br>
     <%= f.file_field :profilepic, :class => "btn btn-default" %>
   </div>
   <div class="form-group">
@@ -20,7 +20,7 @@
     <%= f.text_field :occupation, :class => "form-control", input_html: {:autofocus => true}, :required => true %>
   </div>
   <div class="form-group">
-    <%= f.label :bday %><br>
+    <%= f.label :birthday %><br>
     <%= f.date_select :bday, :start_year => Date.current.year, :end_year => Date.current.year-80%>
   </div>
   <div class="form-group">
