--- a/app/views/members/_customform.html.erb
+++ b/app/views/members/_customform.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div class="form-group">
+    <%= f.label :member_id %><br>
+    <%= f.number_field :member_id, :value => @member_id %>
+  </div>
+  <div class="form-group">
+    <%= f.label :email %><br>
+    <%= f.text_field :email, :value => @member_email %>
+  </div>
+  <div class="form-group">
     <%= f.label :profile_Picture %><br>
     <%= f.file_field :profilepic, :class => "btn btn-default" %>
   </div>
